# skillgenie

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  config.py  constants.py  database.py  pyproject.toml  requirements.txt
skillgenie/: config.py  exceptions.py
skillgenie/core/: __init__.py  engine.py  evaluator.py  learner.py  lifecycle.py  recommender.py  scorer.py
skillgenie/database/: __init__.py  bootstrap.py  connection.py  manager.py  migrations.py  session.py
skillgenie/database/repositories/: __init__.py  audit_repository.py  base_repository.py  capability_repository.py  metrics_repository.py  trace_repository.py
skillgenie/database/sql/: create_tables.py  indexes.py
skillgenie/models/: __init__.py  capabilities.py  capability.py  execution.py  metrics.py  recommendation.py  trace.py
skillgenie/sql/: create_tables.py
skillgenie/tracing/: __init__.py  duplicate_detector.py  input_output_extractor.py  parser.py  prompt_extractor.py  skill_generator.py  tool_extractor.py  workflow_extractor.py
skillgenie/utils/: logger.py
